--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,7 +69,7 @@
         inset 1px 1px 3px rgba(255, 255, 255, 0.05),
         2px 2px 8px rgba(0, 0, 0, 0.6),
         4px 4px 20px rgba(0, 0, 0, 0.4);
-      text-align: left;
+      text-align: center;
     }
 
     main a {
