--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,11 +8,11 @@
       --background-color: #232021;
       --grid-color: #404041;
       --surface-color: #ffffff;
-      --text-color: #dddddd;
+      --text-color: #000000;
       --primary-color: #626464;
       --border-color: #cccccc;
-      --link-color: #626464;
-      --button-color: #626464;
+      --link-color: #26C6DA;
+      --button-color: #26C6DA;
       --button-hover-color: #7c7f7f;
       --font-size: 16px;
       --image-scale: 1;
