--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
       --text-color: #494848;
       --primary-color: #626464;
       --border-color: #cccccc;
-      --link-color: #26C6DA;
+      --link-color: #1462BA;
       --button-color: #26C6DA;
       --button-hover-color: #7c7f7f;
       --font-size: 16px;
